fix: restore panelv2 z-index, update offline files

--- a/src/components/PanelV2/_mixins.scss
+++ b/src/components/PanelV2/_mixins.scss
@@ -59,7 +59,7 @@
   background-color: $ui-01;
   flex-direction: column;
   justify-content: space-between;
-  z-index: z($layer: floating);
+  z-index: 10000;
   outline: none;
 
   @include rtl {
